[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.11", features = ["ws","headers"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "*"
tower-http = { version = "0.3.0", features = ["cors"] }
futures = "0.3.21"

[profile.release]
opt-level = 'z'  # Optimize for size
lto = true
codegen-units = 1
panic = 'abort'
