[package]
name = "yew-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
wasm-bindgen-futures = "0.4"
serde_json = "*"
reqwest = { version = "0.11", features = ["json"] }
# tokio = { version = "1", features = ["full"] }
